--- a/.github/workflows/config_gene.yml
+++ b/.github/workflows/config_gene.yml
@@ -14,7 +14,7 @@ on:
           - false
 
 env:
-  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_URL: https://git.openwrt.org/openwrt/openwrt.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
@@ -59,8 +59,7 @@ jobs:
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
-        curl -sSL https://raw.githubusercontent.com/chenmozhijin/turboacc/luci/add_turboacc.sh -o add_turboacc.sh && bash add_turboacc.sh
-
+       
         
     - name: 更新源
       run: cd openwrt && ./scripts/feeds update -a
